[package]
name = "minlaunch"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-all", "system-tray", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0.1"
toml = "0.8.12"
open = "5.1.2"
reqwest = {version = "0.12.4", features = ["json"] }
chrono = "0.4.38"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
